--- a/Botoo/Base.lproj/Main.storyboard
+++ b/Botoo/Base.lproj/Main.storyboard
@@ -214,19 +214,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fqR-Un-LfN">
+                                <rect key="frame" x="0.0" y="94" width="375" height="480"/>
+                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fXz-17-CD1">
-                                <rect key="frame" x="20" y="20" width="36" height="32"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <state key="normal" title="X">
-                                    <color key="titleColor" red="0.85098039219999999" green="0.1058823529" blue="0.37647058820000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <rect key="frame" x="20" y="20" width="30" height="22"/>
+                                <state key="normal" title="닫기">
+                                    <color key="titleColor" red="0.84705882349999995" green="0.1058823529" blue="0.37647058820000001" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
                                     <action selector="closeButtonTapped:" destination="vnq-Hu-44x" eventType="touchUpInside" id="zbx-Z3-Y7j"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fqR-Un-LfN">
-                                <rect key="frame" x="0.0" y="146" width="375" height="375"/>
-                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -237,7 +236,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SSO-PQ-Ymg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-144.5" y="-618.5"/>
+            <point key="canvasLocation" x="-144.5" y="-654.5"/>
         </scene>
         <!--Connect Scene View Controller-->
         <scene sceneID="oV2-Qh-FG7">
@@ -608,6 +607,7 @@
                         <outlet property="toolbar" destination="92Y-Q6-G81" id="jop-l6-OoA"/>
                         <outlet property="toolbarBottomConstraint" destination="PAh-8n-5Us" id="mtY-UI-MHm"/>
                         <outlet property="toolbarDrawer" destination="F1l-Va-gN6" id="IQ4-Ts-lkb"/>
+                        <segue destination="vnq-Hu-44x" kind="presentation" identifier="picZoomSeg" id="oJk-S0-t2O"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Hff-Qo-aru" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1928,8 +1928,8 @@
         <image name="tab_settings" width="24" height="24"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="jZk-yp-nUi"/>
         <segue reference="4a1-F2-BdS"/>
         <segue reference="x39-vu-HcH"/>
+        <segue reference="oJk-S0-t2O"/>
     </inferredMetricsTieBreakers>
 </document>
