--- a/Botoo/UIChatContactCellL.xib
+++ b/Botoo/UIChatContactCellL.xib
@@ -3,43 +3,51 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="XeU-V4-yZx">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-            <point key="canvasLocation" x="523" y="378"/>
-        </view>
-        <view contentMode="scaleToFill" id="Ygh-qm-ED0">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-            <point key="canvasLocation" x="792" y="412"/>
-        </view>
         <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="90" id="2nx-j6-Kmt" customClass="ChatContactTableViewCellL" customModule="Botoo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="2nx-j6-Kmt" id="VVh-Cd-iL6">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="89.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="89"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q8H-jv-DsU">
-                        <rect key="frame" x="8" y="8" width="41" height="18"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q8H-jv-DsU">
+                        <rect key="frame" x="13" y="18" width="294" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z0x-Ga-NDn">
-                        <rect key="frame" x="8" y="39" width="61" height="30"/>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z0x-Ga-NDn">
+                        <rect key="frame" x="13" y="44" width="61" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="61" id="Ow4-Kl-lZs"/>
+                        </constraints>
                         <state key="normal" title="Contact"/>
                         <connections>
                             <action selector="contactButtonTapped:" destination="2nx-j6-Kmt" eventType="touchUpInside" id="wix-QC-gsc"/>
                         </connections>
                     </button>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default_no_person" translatesAutoresizingMaskIntoConstraints="NO" id="Ixp-HJ-AAC">
+                        <rect key="frame" x="77" y="44" width="30" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="30" id="EDm-Ft-bbO"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
+                <constraints>
+                    <constraint firstItem="Ixp-HJ-AAC" firstAttribute="leading" secondItem="z0x-Ga-NDn" secondAttribute="trailing" constant="3" id="1n6-uL-YCe"/>
+                    <constraint firstItem="z0x-Ga-NDn" firstAttribute="top" secondItem="Q8H-jv-DsU" secondAttribute="bottom" constant="8" symbolic="YES" id="2nI-gy-EnF"/>
+                    <constraint firstItem="z0x-Ga-NDn" firstAttribute="top" secondItem="Ixp-HJ-AAC" secondAttribute="top" id="82F-U2-dxm"/>
+                    <constraint firstItem="Q8H-jv-DsU" firstAttribute="leading" secondItem="VVh-Cd-iL6" secondAttribute="leadingMargin" constant="5" id="GiE-8w-7WX"/>
+                    <constraint firstItem="Q8H-jv-DsU" firstAttribute="top" secondItem="VVh-Cd-iL6" secondAttribute="topMargin" constant="10" id="Gns-SJ-dse"/>
+                    <constraint firstItem="Q8H-jv-DsU" firstAttribute="leading" secondItem="z0x-Ga-NDn" secondAttribute="leading" id="gc1-Gr-2LG"/>
+                    <constraint firstItem="Q8H-jv-DsU" firstAttribute="centerX" secondItem="VVh-Cd-iL6" secondAttribute="centerX" id="xsL-Yh-9ov"/>
+                    <constraint firstItem="z0x-Ga-NDn" firstAttribute="bottom" secondItem="Ixp-HJ-AAC" secondAttribute="bottom" id="yNe-CW-UdS"/>
+                </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="contactButton" destination="z0x-Ga-NDn" id="yVa-OX-pvg"/>
@@ -48,4 +56,7 @@
             <point key="canvasLocation" x="697" y="359"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="default_no_person" width="18" height="18"/>
+    </resources>
 </document>
